--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@types/vue-barcode-reader": "^0.0.3",
         "axios": "^0.21.4",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -23,6 +24,7 @@
     "dependencies": {
         "@zxing/browser": "^0.1.5",
         "quagga": "^0.12.1",
-        "vue": "^2.7.16"
+        "vue": "^2.7.16",
+        "vue-barcode-reader": "^1.0.3"
     }
 }
